--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="=file:///Users/sagyanniraula/Documents/web%20assignment%20/form.html">Form</a>
+	<nav>
+		<ul>
+	<li><a href="=file:///Users/sagyanniraula/Documents/web%20assignment%20/form.html">Form</a></li>
+</ul>
+</nav>
 <title>Index</title>
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div class="header"><h3>Short Description</h3></div>
 	<div class="container">
-	<h3>
-	<p> My name is Sagyan Niraula.I am from Bhaktapur.This is my first page which included a small breif of my first web assignment.</h3>
-  This is my first page in which it's index.html of web assignment. We are assumed to design a web page with the help of html and css code.
+	<p><h2>My name is Sagyan Niraula.I am from Bhaktapur.This is my first page which included a small breif of my first web assignment.</h2>
+  <h3>This is my first page in which it's index.html of web assignment. We are assumed to design a web page with the help of html and css code.</h3>
   </p>
   </div>
     <div class="footer">
