--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,3 +5,21 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<div class="header1">
+		<h1>PORTFOLIO</h1>
+
+	</div>
+	<div class="middle">
+		<article class="grade1">
+		<p><h2>My name is Sagyan Niraula. I am from Bhaktapur district of Nepal. This is my portfolio. I was born on 31th August 2003 A.D. My email-id is:sagyanniraula040@gmail.com. My University ID is:22425915	
+		</article>
+		<article class="grade2">
+		<img src="sagyan.jpg"  width="350" height="343">
+	</div>
+	<div class="footer1">
+		<h1>THANK YOU</h1>
+		 <a href="index.html">Back to home</a> 
+	</div>
+</article>
+</body>
+</html
