--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Form</title>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="sagyan.css">
 <form>
 <div class="maintitle1">
     		Personal Information:<br>
@@ -45,6 +45,8 @@
     <input type="button" onclick=" alert ('submit')" value="Click Me!"> 
   </div>
   </form>
+  <form>
+    <input type="button" onclick=" alert ('submit')" value="Click Me!"> </form>
   </head>
   <a href="index.html">Back to home</a> 
 </body>
