--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="sagyan.css">
+    
     <body>
       <div class="nav">
-          <label for="toggle">&#9776;</label>
-          <input type="checkbox" id="toggle"/>
+          
           <div class="menu">
               <a href="Portfolio.html">Portfolio</a>
               <a href="contact.html">Contact</a>
