--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Form</title>
-<link rel="stylesheet" type="text/css" href="sagyan.css">
+<link rel="stylesheet" type="text/css" href="main.css">
 <form>
 <div class="maintitle1">
     		Personal Information:<br>
