--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Blog</title>
-	<link rel="stylesheet" type="text/css" href="sagyan.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div class="header2">
