--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="sagyan.css">
-    
+	<link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
       <div class="nav">
-          
+          <label for="toggle">&#9776;</label>
+          <input type="checkbox" id="toggle"/>
           <div class="menu">
               <a href="Portfolio.html">Portfolio</a>
               <a href="contact.html">Contact</a>
